--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "govtnz/progresslogentry",
     "description": "Module for logging progress of a task. Can also be derived from to create tasks and track their progress. Requires SilverStripe >= 3.0.",
     "homepage": "https://github.com/govtnz/progresslogentry",
+    "license": "BSD-3-Clause",
     "type": "silverstripe-module",
  	"repositories": [
 		{
